# supergh

./: .gitignore  LICENSE  README.md  build.py  design.txt  install.ps1  install.sh  pyproject.toml  run.py  setup_path.py  sgh  sgh.spec  uninstall.ps1  uninstall.sh
.github/workflows/: release.yml
supergh/: __init__.py  __main__.py  cli.py
supergh/api/: __init__.py  client.py
supergh/auth/: __init__.py  app_auth.py  base.py  middleware.py  oauth.py  permissions.py  store.py
supergh/commands/: __init__.py  alias.py  auth.py  codespace.py  config_cmd.py  gui.py  issue.py  misc.py  pr.py  project.py  release.py  repo.py  ruleset.py  search.py  secret.py  setup.py  workflow.py
supergh/config/: __init__.py  manager.py
supergh/export/: __init__.py  exporter.py
supergh/extras/: __init__.py  pipeline.py  report.py
supergh/ui/: __init__.py  web.py
supergh/ui/static/css/: app.css
supergh/ui/static/js/: app.js  store.js
supergh/ui/static/js/components/: header.js  loader.js  modal.js  sidebar.js  toast.js
supergh/ui/static/js/pages/: login.js
supergh/ui/static/js/pages/compliance/: check.js
supergh/ui/static/js/pages/issues/: list.js
supergh/ui/static/js/pages/pipelines/: overview.js
supergh/ui/static/js/pages/pr/: list.js
supergh/ui/static/js/pages/repos/: detail.js  list.js
supergh/ui/static/js/pages/search/: results.js
supergh/ui/static/js/pages/teams/: list.js
supergh/ui/static/js/utils/: api.js  format.js  permissions.js
supergh/ui/templates/: index.html
supergh/utils/: errors.py  logger.py
(+1 files in other folders)
